--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.15.0",
+    "react-native-shared-element": "^0.7.0",
     "react-native-svg": "^12.1.0",
-    "react-native-vector-icons": "^7.1.0"
+    "react-native-vector-icons": "^7.1.0",
+    "react-navigation-shared-element": "^2.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.3",
